<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewSignUpTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:typeface="serif"
        android:textSize="24sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp" />

    <EditText
        android:id="@+id/editTextEmailSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewSignUpTitle"
        android:layout_marginTop="30dp"
        android:maxLines="1"
        android:hint="@string/email_hint"
        android:inputType="text|textNoSuggestions"/>

    <EditText
        android:id="@+id/editTextUsernameSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:layout_below="@id/editTextEmailSignUp"
        android:layout_marginTop="30dp"
        android:maxLines="1"
        android:maxLength="25"
        android:inputType="text|textNoSuggestions"/>

    <EditText
        android:id="@+id/editTextPasswordSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:layout_below="@id/editTextUsernameSignUp"
        android:layout_marginTop="30dp"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/editTextConfirmPasswordSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_confirm"
        android:inputType="textPassword"
        android:layout_below="@id/editTextPasswordSignUp"
        android:layout_marginTop="30dp"
        android:maxLines="1"/>

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_below="@id/editTextConfirmPasswordSignUp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <!-- This LinearLayout will contain the TextView for the sign-in prompt -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewPromptSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_prompt"
            android:textSize="16sp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textViewLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/dark_green"
            android:clickable="true"
            android:focusable="true" />
    </LinearLayout>

</RelativeLayout>
