...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:id="@+id/profile_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="username's SweetHome"
            android:textColor="@color/black"
            android:textSize="15sp"
...
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:id="@+id/profile_logout"
                android:layout_margin="5dp"
                android:textColor="@color/white"
                android:backgroundTint="@color/dark_green"/>
            <Button
                android:id="@+id/profile_cancel"
                android:layout_width="wrap_content"
...
