...
            android:layout_height="wrap_content"
            android:text="@string/sign_up_prompt"
            android:textSize="16sp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textViewSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/dark_green"
...
